--- a/browser/resources/settings/brave_sync_page/brave_sync_code_dialog.html
+++ b/browser/resources/settings/brave_sync_page/brave_sync_code_dialog.html
@@ -276,7 +276,7 @@
     show-on-attach
   >
     <div slot="title">
-      <span clas="dialog-title">$i18n{braveSyncViewCodeTitle}</span>
+      <span class="dialog-title">$i18n{braveSyncViewCodeTitle}</span>
       <span class="dialog-subtitle">$i18n{braveSyncViewCodeDesc1}
         $i18n{braveSyncViewCodeDesc2}
         $i18n{braveSyncViewCodeDesc3}
@@ -312,7 +312,6 @@
       >
         $i18n{ok}
       </cr-button>
-    </div>
     </div>
   </cr-dialog>
 </template>
