--- a/browser/resources/settings/brave_appearance_page/toolbar.html
+++ b/browser/resources/settings/brave_appearance_page/toolbar.html
@@ -70,3 +70,8 @@
   class="cr-row"
   label="$i18n{showSearchTabsBtn}">
 </settings-toggle-button>
+<settings-toggle-button
+  pref="{{prefs.brave.tabs.hover_tooltips_enabled}}"
+  class="cr-row"
+  label="Show tab tooltips on hover">
+</settings-toggle-button>
