Use internationalized string

--- a/browser/resources/settings/brave_appearance_page/toolbar.html
+++ b/browser/resources/settings/brave_appearance_page/toolbar.html
@@ -73,5 +73,5 @@
 <settings-toggle-button
   pref="{{prefs.brave.tabs.hover_tooltips_enabled}}"
   class="cr-row"
-  label="Show tab tooltips on hover">
+  label="$i18n{appearanceSettingsShowTabHoverTooltip}">
 </settings-toggle-button>
