--- a/browser/resources/settings/brave_appearance_page/toolbar.html
+++ b/browser/resources/settings/brave_appearance_page/toolbar.html
@@ -71,7 +71,7 @@
   label="$i18n{showSearchTabsBtn}">
 </settings-toggle-button>
 <settings-toggle-button
-  pref="{{prefs.brave.tabs.hover_tooltips_enabled}}"
+  pref="{{prefs.brave.tabs.hover_card_tooltips_enabled}}"
   class="cr-row"
   label="$i18n{appearanceSettingsShowTabHoverTooltip}">
 </settings-toggle-button>
