Work on preview cards

--- a/browser/resources/settings/brave_appearance_page/toolbar.html
+++ b/browser/resources/settings/brave_appearance_page/toolbar.html
@@ -75,3 +75,8 @@
   class="cr-row"
   label="$i18n{appearanceSettingsShowTabHoverTooltip}">
 </settings-toggle-button>
+<settings-toggle-button
+  pref="{{prefs.brave.tabs.hover_card_preview_enabled}}"
+  class="cr-row"
+  label="Show tab preview cards">
+</settings-toggle-button>
