--- a/browser/resources/settings/brave_appearance_page/toolbar.html
+++ b/browser/resources/settings/brave_appearance_page/toolbar.html
@@ -72,7 +72,7 @@
 </settings-toggle-button>
 <div class="settings-box">
   <div class="flex">
-    <div class="label">Tab Tooltip Mode</div>
+    <div class="label">$i18n{appearanceSettingsTabHoverMode}</div>
   </div>
   <settings-dropdown-menu
     pref="{{prefs.brave.tabs.tooltip_mode}}"
