--- a/browser/resources/settings/brave_appearance_page/toolbar.html
+++ b/browser/resources/settings/brave_appearance_page/toolbar.html
@@ -75,7 +75,7 @@
     <div class="label">$i18n{appearanceSettingsTabHoverMode}</div>
   </div>
   <settings-dropdown-menu
-    pref="{{prefs.brave.tabs.tooltip_mode}}"
+    pref="{{prefs.brave.tabs.hover_mode}}"
     on-settings-control-changed="onTabTooltipModeChanged_"
     menu-options="[[tabTooltipModes_]]">
   </settings-dropdown-menu>
