Add flag to experiments

--- a/browser/resources/federated_internals/federated_internals.html
+++ b/browser/resources/federated_internals/federated_internals.html
@@ -13,13 +13,13 @@
   <div>
     <label for="stores">Choose a data store:</label>
     <select name="stores" id="stores" form="storeform">
-        <option value="ad-timing">Ad Notification Timing</option>
+        <option value="ad-timing">Notification Ad Timing</option>
     </select>
     <button id="data-store-logs-dump">Dump</button>
 
     <p id="service-message"></p>
     <table id="data-store-tab">
-      <caption hidden="true">Local ad timing logs</caption>
+      <caption hidden="true">Notification ad timing logs</caption>
       <thead>
         <tr id="data-store-headers">
           <th></th>
