--- a/browser/resources/federated_internals/federated_internals.html
+++ b/browser/resources/federated_internals/federated_internals.html
@@ -13,7 +13,7 @@
   <div>
     <label for="stores">Choose a data store:</label>
     <select name="stores" id="stores" form="storeform">
-        <option value="ad-timing">Notification Ad Timing</option>
+        <option value="notification-ad-timing">Notification Ad Timing</option>
     </select>
     <button id="data-store-logs-dump">Dump</button>
 
